# velosearch

./: .gitignore  Cargo.toml  README.md  bench.fish  boolean_queries.txt  cnf_queries.txt  dnf_queries.txt  flame.sh  nohup.out  perf.sh
FST-rs/: Cargo.toml
FST-rs/.VSCodeCounter/2023-08-23_19-25-03/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
FST-rs/src/: bitvector.rs  fst.rs  fst_builder.rs  label_vector.rs  lib.rs  louds_dense.rs  louds_sparse.rs
adaptive_hybrid_trie/: Cargo.toml
adaptive_hybrid_trie/src/: lib.rs
adaptive_hybrid_trie/src/ah_trie/: ah_trie.rs  mod.rs
arrow-datafusion/: .gitignore  .gitmodules  Cargo.toml
arrow-datafusion/.github/: dependabot.yml
arrow-datafusion/benchmarks/: Cargo.toml
arrow-datafusion/datafusion-cli/: Cargo.toml
arrow-datafusion/datafusion-examples/: Cargo.toml
arrow-datafusion/parquet-test-utils/: Cargo.toml
arrow-datafusion/test-utils/: Cargo.toml
art-rs/src/: keys.rs  lib.rs
benches/: arrow_bitwise_and.rs  bitmap_vs_sorted.rs  hashset_intersection.rs  hashset_withoutbuild.rs  scalar_simd.rs  short_circuit.rs  sorted_list_intersection.rs  vectorized_codegen.rs
doc/: crates.js  source-files.js
doc/adaptive_hybrid_trie/: all.html  index.html  sidebar-items.js  struct.HashTermIdx.html  type.TermIdx.html
doc/addr2line/: all.html  fn.demangle.html  fn.demangle_auto.html  index.html  struct.Context.html  struct.Frame.html  struct.FrameIter.html  struct.FunctionName.html  struct.Location.html  struct.LocationRangeIter.html
doc/ahash/: all.html  index.html  struct.AHasher.html
doc/aho_corasick/: all.html  enum.AhoCorasickKind.html  enum.Anchored.html  enum.MatchErrorKind.html  enum.MatchKind.html  enum.StartKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.BuildError.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Input.html  struct.Match.html  struct.MatchError.html  struct.PatternID.html  struct.PatternIDError.html  struct.Span.html  struct.StreamFindIter.html
doc/anes/: all.html  enum.Attribute.html  enum.ClearBuffer.html  enum.ClearLine.html  enum.Color.html  index.html  macro.csi.html  macro.esc.html  macro.execute.html  macro.queue.html  macro.sequence.html  macro.sgr.html  struct.DisableCursorBlinking.html  struct.DisableMouseEvents.html  struct.EnableCursorBlinking.html  struct.EnableMouseEvents.html  struct.HideCursor.html  struct.MoveCursorDown.html  struct.MoveCursorLeft.html  struct.MoveCursorRight.html  struct.MoveCursorTo.html  struct.MoveCursorToColumn.html  struct.MoveCursorToNextLine.html  struct.MoveCursorToPreviousLine.html  struct.MoveCursorUp.html  struct.ReportCursorPosition.html  struct.ResetAttributes.html  (+11 more)
docs/: crates.js  enum.Handler.html  help.html  index.html  search-index.js  settings.html  source-files.js  struct.STEP_LEN.html
scripts/: bench_batchsize.py  bench_memory.py  bench_parall.py  bench_performance.py  calc_average_term_len.py  wiki_len.py
src/: lib.rs  main.rs
(+38459 files in other folders)
