[package]
name = "velosearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["adaptive_hybrid_trie", "roaring-rs", "FST-rs", "art-rs"]
exclude = ["arrow-datafusion"]

[features]
default = ["hash_idx", "scalar"]
hash_idx = ["adaptive_hybrid_trie/hash_idx"]
trie_idx = ["adaptive_hybrid_trie/trie_idx"]
scalar = []
simd = []
compile = []
hybrid = []

[dependencies]
datafusion = {path="arrow-datafusion/datafusion/core", features=["simd"]}
# datafusion = "22.0.0"
tokio = {version="1.0", features=["full"]}
serde_json = "1.0"
serde = {version = "1.0", features = ["derive", "rc"]}
failure = "0.1.5"
rand = "0.8.5"
clap = {version = "4.1", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
threadpool = "1.8.0"
futures = "0.3"
rayon = "1.7"
chrono = "0.4"
parking_lot = "0.12"
adaptive_hybrid_trie = {path="adaptive_hybrid_trie"}
cranelift = "0.100"
cranelift-jit = {version = "0.100", features = ["selinux-fix"] }
cranelift-module = "0.100"
cranelift-native = "0.100"
tantivy = "0.19"
criterion = {version = "0.5", features = ["html_reports"]}
sorted-iter = "0.1.11"
lazy_static = "1.4"
bincode = "1.3"
dashmap = "5.5"
jemallocator = "0.5.4"
mimalloc = "0.1.39"
peg = "0.8"
roaring = {path="roaring-rs", features = ["serde"]}
memmap = "0.7"
rkyv = "0.7"
itertools = "0.10"

[[bench]]
name = "arrow_bitwise_and"
harness = false

[[bench]]
name = "hashset_intersection"
harness = false

[[bench]]
name = "hashset_withoutbuild"
harness = false

[[bench]]
name = "sorted_list_intersection"
harness = false

[[bench]]
name = "bitmap_vs_sorted"
harness = false

[[bench]]
name = "scalar_simd"
harness = false

[[bench]]
name = "short_circuit"
harness = false

#[[bench]]
#name = "vectorized_codegen"
#harness = false

[profile.release]
 #lto = "fat"
 #opt-level = 3
 overflow-checks = false

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]