[package]
name = "fst-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { git="https://github.com/RTEnzyme/arrow-rs", branch = "columnar4inverted", features = ["prettyprint"] }
tracing = "0.1"

[dev-dependencies]
rand = "0.8"